# illustration-app

./: .gitignore  AGENT_FLOW.md  CLAUDE_CODE_ITERATION_NOTE.md  CLAUDE_CODE_PROMPT.md  I18N_IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_REMAINING.md  README.md  REMAINING_TASKS_CHECKLIST.md  SPECIFICATION.md  TECHNICAL_DECISIONS.md  USER_GUIDE.md
backend/: .dockerignore  .env.example  Dockerfile  Makefile  alembic.ini  fly.toml  pyproject.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 20260524_2038_092566a56250_initial_schema.py  20260525_1225_a4bfd0b7ebb9_add_paragraph_index_to_illustrations.py  20260525_1457_d218a2d483d6_add_companion_fields_to_illustrations.py  20260526_1113_f3dec31ba972_add_i18n_fields_and_translation_tables.py  20260526_2143_6e9392390ef9_add_scene_excerpt_translations.py  20260527_1536_e0d7c8c320d3_add_manual_chat_fallback_tables.py  20260527_1900_a1f6c8e21b34_add_manual_sub_phase_and_last_agreed_concept.py  20260528_1032_fa7fad0a24a7_add_prompting_notes_to_manual_.py  20260528_1200_b8c1f4d2a9e3_add_per_attempt_prompts_to_manual_messages.py  20260529_1100_c3d92b71f4a8_add_environments_and_reserved_entities.py  20260529_1500_d4a8b6c2e9f1_make_illustrations_character_role_nullable.py  20260529_1550_f72957f6873c_add_illustration_attempt_history_table.py  20260529_1700_e7b4d9c1f2a3_unify_narrative_entities_register.py  (+7 more)
backend/app/: character_config.json  config.py  constants.py  main.py
backend/app/agents/: chat.md  (+10 more)
backend/fairy_tale_illustrator_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py
(+106 files in other folders)
